# rustico

./: Cargo.toml  README.md
src/: commands.rs  main.rs
